validaciones form banner, sobremi, exp y conoc

--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -39,7 +39,8 @@
                             #nuevoTitulo 
                             type="text" 
                             class="form-control inputModal" 
-                            placeholder="Ingrese nuevo título">
+                            placeholder="Ingrese nuevo título"
+                            maxlength="30">
                     </div> 
                     <div class="d-flex align-items-baseline  modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Texto actual</label>
