--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -81,7 +81,7 @@
                 </div>                        
                 <div class="mb-2">
                     <label for="user" class="form-label textoModal me-4">Nueva Imagen</label>                                               
-                    <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file">
+                    <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file" accept="image/*">
                     <label class="textoModal">{{nombreArchivo}}</label>             
                 </div>
                 <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
@@ -126,7 +126,7 @@
                 </div>                        
                 <div class="mb-2">
                     <label for="user" class="form-label textoModal me-4">Nueva Imagen</label>
-                    <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file">
+                    <input class="inputEdicion me-2" (change)="capturarImagen($event)" type="file" accept="image/*">
                     <label class="textoModal">{{nombreArchivo}}</label> 
                 </div>                          
                 <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
@@ -171,7 +171,7 @@
                 </div>
                 <div class="d-flex align-items-baseline mb-3 modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Nuevo título</label>
-                    <input type="text" #nuevoTitulo class="form-control inputModal" placeholder="Ingrese nuevo título">
+                    <input type="text" #nuevoTitulo class="form-control inputModal" maxlength="20" placeholder="Ingrese nuevo título">
                 </div> 
                 <div class="d-flex align-items-baseline modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Subtítulo actual</label>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="d-flex align-items-baseline mb-1 modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Nuevo subtítulo</label>
-                    <input type="text" #nuevoSubtitulo class="form-control inputModal" placeholder="Ingrese nuevo subtítulo">
+                    <input type="text" #nuevoSubtitulo class="form-control inputModal" placeholder="Ingrese nuevo subtítulo"  maxlength="35">
                 </div>                
                 
                 <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
