--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -24,7 +24,7 @@
                             formControlName="usuario"
                             (click)="ocultarMensajeError()">
                         <div 
-                            class="mensajeErrorCampo alert alert-danger mb-1" 
+                            class="mensajeErrorFormularios alert alert-danger mb-1" 
                             *ngIf="formularioInvalido && formularioLogin.get('usuario')?.errors?.['required']">
                             Este campo es obligatorio
                         </div>
@@ -40,7 +40,7 @@
                             formControlName="contraseña"
                             (click)="ocultarMensajeError()">
                         <div 
-                            class="mensajeErrorCampo alert alert-danger mt-2" 
+                            class="mensajeErrorFormularios alert alert-danger mt-2" 
                             *ngIf="formularioInvalido && formularioLogin.get('contraseña')?.errors?.['required']">
                             Este campo es obligatorio
                         </div>    
@@ -51,7 +51,7 @@
                         type="button" 
                         class="btn btn-danger"                     
                         data-bs-dismiss="modal"
-                        (click)="resetearInputs(); toggleBtnLoggin()">
+                        (click)="resetearInputs(); toggleBtnLogin()">
                         Cerrar
                     </button>
                     <button
