--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -32,6 +32,18 @@ footer {
     height: auto;
 }
 
+.mensajeErrorContacto{   
+    padding: 4px !important;       
+    width: 95%;
+    margin-left: 3%;
+    margin-bottom: 0px;
+    
+}
+
+.mensajeErrorFormularios{   
+    padding: 4px !important   
+}
+
 /* Modificando la barra de desplazamiento (scrollbar) */
 
 /* Funciona en Firefox */
