form contacto y componentes modal

--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -167,7 +167,7 @@
                         <div 
                             class="mensajeErrorFormularios alert alert-danger" 
                             *ngIf="formularioInvalido && formularioExperiencia.get('url')?.errors?.['pattern']">
-                            Debe ingresar una url válida"
+                            Debe ingresar una url válida
                         </div> 
                         <div class="d-flex align-items-baseline mb-3 modal-body-div">
                             <label for="user" class="form-label etiquetaModal">Fecha Inicio</label>
