--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -51,209 +51,7 @@
                 <router-outlet *ngIf="!mostrarPrimerExp"></router-outlet>                
             </div>  
         </div>              
-    </div>
-
-
-    <!-- MODAL TITULO -->
-
-    <div 
-    class="modal fade modal-lg"      
-    id="titulo-experiencia-modal" tabindex="-1" 
-    aria-labelledby="textoModalLabel"
-    aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                    <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
-                </div>
-                <div class="modal-body">                                 
-                    <div class="d-flex modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Título actual</label>
-                        <p class="inputModal" id="titulo">{{titulo}}</p>                    
-                    </div>
-                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Nuevo título</label>
-                        <input 
-                            #nuevoTitulo 
-                            type="text" 
-                            class="form-control inputModal" 
-                            placeholder="Ingrese nuevo título"
-                            maxlength="30">
-                    </div>                 
-                    
-                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
-                        <button 
-                            type="button" 
-                            class="btn btn-danger"                            
-                            data-bs-dismiss="modal"
-                            (click)="resetearTitulo()" 
-                            >
-                            Cerrar
-                        </button>
-                        <button 
-                            type="button" 
-                            class="btn btn-primary"                                                      
-                            data-bs-dismiss="modal"
-                            (click)="cambiarTitulo()"                           
-                            >
-                            Aceptar
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- MODAL AÑADIR EXPERIENCIA -->
-
-    <div 
-    class="modal fade modal-lg"      
-    id="experiencia-modal" tabindex="-1" 
-    aria-labelledby="textoModalLabel"
-    aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                    <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Experiencia</h3>                        
-                </div>
-                <div class="modal-body">                           
-                    
-                    <form (ngSubmit)="onSubmit()" [formGroup]="formularioExperiencia">
-                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                            <label for="user" class="form-label etiquetaModal">Empresa</label>
-                            <input 
-                                #empresa 
-                                type="text" 
-                                class="form-control inputModal"
-                                (click)="ocultarMensajeError()" 
-                                placeholder="Ingrese el nombre de la empresa"
-                                maxlength="30"
-                                formControlName="empresa">
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('empresa')?.errors?.['required']">
-                            Este campo es obligatorio
-                        </div> 
-                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                            <label for="user" class="form-label etiquetaModal">Puesto</label>
-                            <input 
-                                #puesto
-                                type="text" 
-                                class="form-control inputModal"
-                                (click)="ocultarMensajeError()" 
-                                placeholder="Ingrese su puesto en la empresa"
-                                maxlength="50"
-                                formControlName="puesto">
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('puesto')?.errors?.['required']">
-                            Este campo es obligatorio
-                        </div> 
-                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                            <label for="user" class="form-label etiquetaModal">URL</label>
-                            <input 
-                                #url
-                                type="text" 
-                                class="form-control inputModal"
-                                (click)="ocultarMensajeError()" 
-                                placeholder="Ingrese la url de la página web de la empresa"
-                                maxlength="200"
-                                formControlName="url">
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('url')?.errors?.['pattern']">
-                            Debe ingresar una url válida
-                        </div> 
-                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                            <label for="user" class="form-label etiquetaModal">Fecha Inicio</label>
-                            <input 
-                                #fechaInicio
-                                type="text" 
-                                class="form-control inputModal"
-                                (click)="ocultarMensajeError()" 
-                                placeholder="Ingrese fecha de inicio (mes y año)"
-                                maxlength="15"
-                                formControlName="fechaInicio">
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('fechaInicio')?.errors?.['required']">
-                            Este campo es obligatorio
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('fechaInicio')?.errors?.['pattern']">
-                            Debe ingresar una fecha en el formato correcto, ejemplo: Marzo 2020.
-                        </div> 
-                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                            <label for="user" class="form-label etiquetaModal">Fecha Fin</label>
-                            <input 
-                                #fechaFin
-                                type="text" 
-                                class="form-control inputModal"
-                                (click)="ocultarMensajeError()" 
-                                placeholder="Ingrese fecha de finalización (mes y año)"
-                                maxlength="15"
-                                formControlName="fechaFin">
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('fechaFin')?.errors?.['required']">
-                            Este campo es obligatorio
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('fechaFin')?.errors?.['pattern']">
-                            Debe ingresar una fecha en el formato correcto, ejemplo: Junio 2022.
-                        </div> 
-                        <div class="d-flex align-items-center mb-3 modal-body-div">
-                            <label for="user" class="form-label etiquetaModal">Descripción</label>              
-                                <textarea
-                                    #descripcion 
-                                    maxlength="300"           
-                                    class="form-control inputModal2"
-                                    (click)="ocultarMensajeError()" 
-                                    placeholder="Ingrese descripción de su puesto en la empresa"
-                                    maxlength="310"
-                                    formControlName="descripcion"></textarea>
-                        </div>
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('descripcion')?.errors?.['required']">
-                            Este campo es obligatorio
-                        </div> 
-                        <div 
-                            class="mensajeErrorFormularios alert alert-danger" 
-                            *ngIf="formularioInvalido && formularioExperiencia.get('descripcion')?.errors?.['pattern']">
-                            Este campo es obligatorio
-                        </div>
-                        
-                        <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
-                            <button 
-                                type="button" 
-                                class="btn btn-danger"                            
-                                data-bs-dismiss="modal"
-                                (click)="resetearInputs(); toggleBtnExperiencia()"
-                                >
-                                Cerrar
-                            </button>
-                            <button 
-                                type="submit" 
-                                class="btn btn-primary"                                                      
-                                [disabled]="!habilitarBotonExperiencia"                                                         
-                                >
-                                Aceptar
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>                                               
+    </div>                     
 </section>
+<app-experiencia-laboral-modal></app-experiencia-laboral-modal>
 
