--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -12,69 +12,6 @@
         <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
             <p class="card-text">{{texto}}</p> 
         </div>                                                                     
-    </div>    
-
-
-    <!-- MODAL TÍTULO Y TEXTO -->
-
-    <div 
-    class="modal fade modal-lg"      
-    id="acercademi-modal" tabindex="-1" 
-    aria-labelledby="textoModalLabel"
-    aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                    <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Texto</h3>                        
-                </div>
-                <div class="modal-body">                                 
-                    <div class="d-flex modal-body-div">
-                        <label for="user" class="form-label etiquetaModal ">Título actual</label>
-                        <p class="inputModal" id="titulo">{{titulo}}</p>                    
-                    </div>
-                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Nuevo título</label>
-                        <input 
-                            #nuevoTitulo 
-                            type="text" 
-                            class="form-control inputModal" 
-                            placeholder="Ingrese nuevo título"
-                            maxlength="30">
-                    </div> 
-                    <div class="d-flex align-items-baseline  modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Texto actual</label>
-                        <p class="textoModal inputModal2">{{texto}}</p>                                       
-                    </div>
-                    <div class="d-flex align-items-center mb-1 modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Nuevo texto</label>
-                        <textarea
-                            #nuevoTexto 
-                            maxlength="300"           
-                            class="form-control inputModal2" 
-                            placeholder="Ingrese nuevo texto"></textarea> 
-                    </div>                
-                    
-                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
-                        <button 
-                            type="button" 
-                            class="btn btn-danger"                            
-                            data-bs-dismiss="modal"
-                            (click)="resetearInputs()"
-                            >
-                            Cerrar
-                        </button>
-                        <button 
-                            type="button" 
-                            class="btn btn-primary"                                                      
-                            data-bs-dismiss="modal"
-                            (click)="cambiarTexto()"                           
-                            >
-                            Aceptar
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-</section>    
+</section> 
+<app-acerca-de-mi-modal></app-acerca-de-mi-modal>   
