--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.css
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.css
@@ -25,22 +25,6 @@ h3{
     color:lightblue
 }
 
-.textoModal, .etiquetaModal, .inputModal {
-    color:black !important
-}
-
-.etiquetaModal {
-    width: 25%
-}
-
-.inputModal {
-    width: 75%
-}
-
-.inputEdicion{
-    width: 11em
-}
-
 #container-info{
     width: 50%;
     padding: 10px 40px;
@@ -56,7 +40,7 @@ h3{
     font-weight: bold;
 }
 
-.inputForm {
+input, textarea {
     background-color: black;
     border-color: gray;
     color: white !important;
@@ -68,9 +52,7 @@ span {
     margin-left: 10px;
 }
 
-
-
-.inputForm:focus{
+input:focus, textarea:focus{
     background-color: black;
     border-color: green;
     box-shadow: 0px 0px 7px green;
@@ -79,7 +61,7 @@ span {
 
 /*  Para anular el efecto del color negro y el fondo blanco del autollenado de los inputs (en realidad no lo anula sino que pospone su efecto 600000s, o sea 10000 minutos) */
 
-.inputForm:-webkit-autofill, .inputForm:-webkit-autofill:focus {  
+input:-webkit-autofill, input:-webkit-autofill:focus {  
     transition: background-color 600000s 0s, color 600000s 0s;
   }
 
