--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-modal/proyectos-modal.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-modal/proyectos-modal.component.html
@@ -1,1 +1,197 @@
-<p>proyectos-modal works!</p>
+
+
+  <!-- MODAL TITULO -->
+
+  <div 
+  class="modal fade modal-lg"      
+  id="titulo-proyecto-modal" tabindex="-1" 
+  aria-labelledby="textoModalLabel"
+  aria-hidden="true"
+  >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+              <div class="modal-header justify-content-center">
+                  <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
+              </div>
+              <div class="modal-body">                                 
+                  <div class="d-flex modal-body-div">
+                      <label for="user" class="form-label etiquetaModal">Título actual</label>
+                      <p class="inputModal" id="titulo">{{titulo}}</p>                    
+                  </div>
+                  <div class="d-flex align-items-baseline mb-3 modal-body-div">
+                      <label for="user" class="form-label etiquetaModal">Nuevo título</label>
+                      <input 
+                          #nuevoTitulo 
+                          type="text" 
+                          class="form-control inputModal" 
+                          placeholder="Ingrese nuevo título">
+                  </div>                 
+                  
+                  <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                      <button 
+                          type="button" 
+                          class="btn btn-danger"                            
+                          data-bs-dismiss="modal"
+                          (click)="resetearTitulo()"
+                          >
+                          Cerrar
+                      </button>
+                      <button 
+                          type="button" 
+                          class="btn btn-primary"                                                      
+                          data-bs-dismiss="modal"
+                          (click)="cambiarTitulo()"                           
+                          >
+                          Aceptar
+                      </button>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <!-- MODAL AÑADIR PROYECTO -->
+
+  <div 
+  class="modal fade modal-lg"      
+  id="proyecto-modal" tabindex="-1" 
+  aria-labelledby="textoModalLabel"
+  aria-hidden="true"
+  >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+              <div class="modal-header justify-content-center modal-body-div">
+                  <h3 class="modal-title textoModal text-center" id="textoModalLabel">Añadir Proyecto</h3>                        
+              </div>
+              <div class="modal-body">
+                    <form (ngSubmit)="onSubmit()" [formGroup]="formularioProyecto">
+                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
+                            <label for="user" class="form-label etiquetaModal">Nombre</label>
+                            <input 
+                                #Nombre 
+                                type="text" 
+                                class="form-control inputModal" 
+                                placeholder="Ingrese nombre"
+                                maxlength="40"
+                                formControlName="nombre"
+                                (click)="ocultarMensajeError()">
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('nombre')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div> 
+                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
+                            <label for="user" class="form-label etiquetaModal">Descripción</label>              
+                                <textarea
+                                    #Descripcion 
+                                    maxlength="300"           
+                                    class="form-control inputModal2"
+                                    formControlName="descripcion" 
+                                    placeholder="Ingrese descripción del proyecto"
+                                    (click)="ocultarMensajeError()"></textarea>
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('descripcion')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div> 
+                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
+                            <label for="user" class="form-label etiquetaModal">URL Sitio Web</label>
+                            <input 
+                                #URLWeb
+                                type="text" 
+                                class="form-control inputModal" 
+                                placeholder="Ingrese url del sitio web del proyecto (si posee)"
+                                maxlength="200"
+                                formControlName="urlWeb"
+                                (click)="ocultarMensajeError()">
+                        </div>                        
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('urlWeb')?.errors?.['pattern']">
+                            Debe ingresar una url válida
+                        </div> 
+                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
+                            <label for="user" class="form-label etiquetaModal">URL GitHub</label>
+                            <input 
+                                #URLGitHub
+                                type="text" 
+                                class="form-control inputModal" 
+                                placeholder="Ingrese url del sitio del proyecto en GitHub"
+                                maxlength="200"
+                                formControlName="urlGitHub"
+                                (click)="ocultarMensajeError()">
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('urlGitHub')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('urlGitHub')?.errors?.['pattern']">
+                            Debe ingresar una url válida
+                        </div>
+                        <div class="d-flex align-items-baseline mb-3 modal-body-div">
+                            <label for="user" class="form-label etiquetaModal">Tecnologías</label>
+                            <input 
+                                #Tecnologias
+                                type="text" 
+                                class="form-control inputModal"
+                                maxlength="100" 
+                                placeholder="Ingrese las tecnologías utilizadas en el proyecto"
+                                formControlName="tecnologias"
+                                (click)="ocultarMensajeError()">
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('tecnologias')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('tecnologias')?.errors?.['pattern']">
+                            Separar las tecnologias con un espacio y agregar un espacio al final
+                        </div>                      
+                        <div class="mb-2 modal-body-div" >
+                            <label for="user" class="form-label etiquetaModal">Imagen</label>                                               
+                            <input 
+                                class="inputEdicion me-2" 
+                                (change)="capturarImagen($event)" 
+                                #nuevaImagen
+                                (click)="ocultarMensajeError()" 
+                                type="file"
+                                accept="image/*"
+                                formControlName="imagen">
+                            <label class="textoModal">{{nombreArchivo}}</label>             
+                        </div>
+                        <div 
+                            class="mensajeErrorFormularios alert alert-danger" 
+                            *ngIf="formularioInvalido && formularioProyecto.get('imagen')?.errors?.['required']">
+                            Este campo es obligatorio
+                        </div>
+                        <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">                 
+                        
+                        <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                          <button 
+                              type="button" 
+                              class="btn btn-danger"                            
+                              data-bs-dismiss="modal"
+                              (click)="resetearInputs(); toggleBtnProyecto()"
+                              >
+                              Cerrar
+                          </button>
+                          <button 
+                              type="submit" 
+                              class="btn btn-primary"                                                      
+                              [disabled]="!habilitarBotonProyecto"                                                                                   
+                              >
+                              Aceptar
+                          </button>
+                        </div>
+                    </form>
+              </div>
+          </div>
+      </div>
+  </div>
