--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -31,6 +31,23 @@ footer {
     background: #000000;
     height: auto;
 }
+.textoModal, .etiquetaModal, .inputModal {
+    color:black !important
+}
+
+.etiquetaModal {
+    width: 30%
+}
+
+.etiquetaModal2, .inputModal2 {
+    overflow: auto;
+    max-height: 60px;
+    width: 70%;
+}
+
+.inputModal {
+    width: 70%
+}
 
 .mensajeErrorContacto{   
     padding: 4px !important;       
