cierre manual modales forms

--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -14,4 +14,7 @@
         </div>                                                                     
     </div>
 </section> 
-<app-acerca-de-mi-modal></app-acerca-de-mi-modal>   
+<app-acerca-de-mi-modal
+    (modificarTitulo)="cambiarTitulo($event)"
+    (modificarTexto)="cambiarTexto($event)">
+</app-acerca-de-mi-modal>   
