--- a/Proyecto-Angular/src/app/components/banner/banner-modal/banner-modal.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner-modal/banner-modal.component.html
@@ -44,8 +44,7 @@
                         </button>
                         <button 
                             type="submit" 
-                            class="btn btn-primary"                                         
-                            [disabled]="!habilitarBotonBanner">
+                            class="btn btn-primary">
                             Aceptar
                         </button>
                     </div>
