--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal/conocimientos-modal.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal/conocimientos-modal.component.html
@@ -133,9 +133,7 @@ aria-hidden="true"
                         </button>
                         <button 
                             type="submit" 
-                            class="btn btn-primary"                                                      
-                            [disabled]="!habilitarBotonConocimientos"                                                                                   
-                            >
+                            class="btn btn-primary">
                             Aceptar
                         </button>
                     </div>
