--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.html
@@ -147,4 +147,6 @@
 
 </section>
 
-<app-contacto-modal></app-contacto-modal>  
+<app-contacto-modal
+    (modificarTitulo)="cambiarTitulo($event)">
+</app-contacto-modal>  
