--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
@@ -29,5 +29,7 @@
          
     </div>         
 </section>
-<app-formacion-academica-modal></app-formacion-academica-modal>
+<app-formacion-academica-modal
+    (modificarTitulo)="cambiarTitulo($event)">
+</app-formacion-academica-modal>
 
