--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
@@ -28,5 +28,7 @@
       </div>              
   </div>                                               
 </section>
-<app-proyectos-modal></app-proyectos-modal>
+<app-proyectos-modal
+    (modificarTitulo)="cambiarTitulo($event)">
+</app-proyectos-modal>
 
