--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -53,5 +53,7 @@
         </div>              
     </div>                     
 </section>
-<app-experiencia-laboral-modal></app-experiencia-laboral-modal>
+<app-experiencia-laboral-modal
+    (modificarTitulo)="cambiarTitulo($event)">
+</app-experiencia-laboral-modal>
 
