--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.html
@@ -58,8 +58,7 @@
                         #botonLogin 
                         type="submit" 
                         class="btn btn-primary"                    
-                        (click)="resetearInputs()"
-                        [disabled]="!habilitarBotonLogin">
+                        (click)="resetearInputs()">
                         Ingresar
                     </button>
                     
